# ft_transcendence

./: .env_test  .gitignore  Makefile  docker-compose.yml
cli/: .tokens.json  pong_cli.py
containers/adminer/: Dockerfile
containers/adminerneo/4/: Dockerfile
containers/django/: Dockerfile  entrypoint.sh
containers/postgres/: Dockerfile
containers/redis/: Dockerfile
srcs/backend/djback/: main.py  manage.py  pyproject.toml
srcs/backend/djback/djback/: asgi.py  settings.py  urls.py  wsgi.py
srcs/backend/djback/djback/configs/: base.py
srcs/backend/djback/uprofiles/: models.py  serializers.py  views.py
srcs/backend/transa/: README.md  manage.py  pyproject.toml
srcs/backend/transa/auth/: apps.py  urls.py  views.py
srcs/backend/transa/chat/: admin.py  consumers.py  models.py  routing.py  utils.py
srcs/backend/transa/cli/: .tokens.json  pong_cli.py
srcs/backend/transa/friends/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
srcs/backend/transa/game/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
srcs/backend/transa/moshpit/: admin.py  apps.py  consumers.py  models.py  moshpit_logic.py  routing.py  utils.py
srcs/backend/transa/tournaments/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  service.py  signals.py  urls.py  views.py
srcs/backend/transa/trans_auth/: serializers.py  urls.py  utils.py  views.py
srcs/backend/transa/transa/: asgi.py  middleware.py  settings.py  urls.py  ws_routing.py  wsgi.py
srcs/backend/transa/transa/configs/: base.py  dev.py  prod.py  stage.py
srcs/backend/transa/uprofiles/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
(+39 files in other folders)
